# server/docs/swagger.json
@@ -1,8 +1,15 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Luxora is a secure, modern backend API for managing listings, bids, and authentication with OAuth2 providers. This API powers the Luxora marketplace platform, enabling seamless user authentication, listing management, and bidding workflows.",
+        "title": "Luxora Marketplace API",
+        "contact": {},
+        "version": "0.8.0"
     },
+    "host": "api.luxoras.nl",
     "paths": {
         "/auth/github": {
             "get": {
